--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository: "abhinavjnu/abhinavjnu.github.io"
 
 # Theme
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
-minimal_mistakes_skin: "default"
+minimal_mistakes_skin: "air"
 
 # Build settings
 markdown: kramdown
@@ -117,7 +117,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: true
@@ -129,4 +129,4 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
